--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K0N-Um-D7r">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalEntriesTableViewCell" rowHeight="107" id="ogn-4c-QqH" customClass="JournalEntriesTableViewCell" customModule="TripLog" customModuleProvider="target">
@@ -92,16 +92,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="K0N-Um-D7r" secondAttribute="bottom" constant="64" id="P8a-ow-2lJ"/>
                             <constraint firstItem="K0N-Um-D7r" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="-64" id="SJW-so-v4h"/>
                             <constraint firstAttribute="trailing" secondItem="K0N-Um-D7r" secondAttribute="trailing" id="kbB-ro-8VG"/>
                             <constraint firstItem="K0N-Um-D7r" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="ngo-UR-OCe"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="K0N-Um-D7r" secondAttribute="bottom" id="u08-us-zuh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YcF-mY-hIn">
                         <barButtonItem key="rightBarButtonItem" title="New Journal Entry" id="G8D-Dr-3ze">
                             <connections>
-                                <segue destination="0zj-l8-yQj" kind="show" id="qu8-hy-h17"/>
+                                <segue destination="0zj-l8-yQj" kind="show" identifier="AddJournal" id="qu8-hy-h17"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -171,21 +171,44 @@
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QgO-Sw-gyA">
-                                <rect key="frame" x="10" y="124" width="355" height="489"/>
+                                <rect key="frame" x="10" y="164" width="355" height="449"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ddn-6w-CEX">
+                                <rect key="frame" x="10" y="124" width="355" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrV-Tn-v0Z">
+                                        <rect key="frame" x="0.0" y="0.0" width="87" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="87" id="61U-V0-gJC"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Optional" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q4V-dy-c9P">
+                                        <rect key="frame" x="97" y="0.0" width="258" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="TcL-QC-p7Y" firstAttribute="top" secondItem="QgO-Sw-gyA" secondAttribute="bottom" constant="10" id="13i-v5-ciA"/>
-                            <constraint firstItem="QgO-Sw-gyA" firstAttribute="top" secondItem="ytS-jf-ctG" secondAttribute="bottom" constant="10" id="2Bz-JZ-hY2"/>
                             <constraint firstItem="ytS-jf-ctG" firstAttribute="top" secondItem="D8R-5M-Zfe" secondAttribute="bottom" constant="20" id="EI7-OH-Keg"/>
+                            <constraint firstAttribute="trailing" secondItem="ddn-6w-CEX" secondAttribute="trailing" constant="10" id="G1H-js-daz"/>
+                            <constraint firstItem="QgO-Sw-gyA" firstAttribute="top" secondItem="ddn-6w-CEX" secondAttribute="bottom" constant="10" id="PWf-ty-fdf"/>
+                            <constraint firstItem="ddn-6w-CEX" firstAttribute="leading" secondItem="7Iu-gR-xsc" secondAttribute="leading" constant="10" id="att-KI-9v5"/>
                             <constraint firstAttribute="trailing" secondItem="ytS-jf-ctG" secondAttribute="trailing" constant="10" id="hF0-dt-KQd"/>
                             <constraint firstItem="ytS-jf-ctG" firstAttribute="leading" secondItem="7Iu-gR-xsc" secondAttribute="leading" constant="10" id="qPO-lu-KUu"/>
                             <constraint firstAttribute="trailing" secondItem="QgO-Sw-gyA" secondAttribute="trailing" constant="10" id="u2O-es-2qE"/>
                             <constraint firstItem="QgO-Sw-gyA" firstAttribute="leading" secondItem="7Iu-gR-xsc" secondAttribute="leading" constant="10" id="uzU-7e-q1Y"/>
+                            <constraint firstItem="ddn-6w-CEX" firstAttribute="top" secondItem="ytS-jf-ctG" secondAttribute="bottom" constant="10" id="vgH-eK-dmJ"/>
                         </constraints>
                     </view>
                     <toolbarItems>
@@ -208,7 +231,11 @@
                                 <action selector="cancelEditing:" destination="Pgc-aW-7tY" id="uXJ-vO-Mxi"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="3DH-aT-dw9"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="3DH-aT-dw9">
+                            <connections>
+                                <segue destination="ajq-gl-0xF" kind="unwind" unwindAction="unwindFromEditWithSender:" id="hGc-6j-5Mf"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -217,10 +244,12 @@
                         <outlet property="journalTextView" destination="QgO-Sw-gyA" id="Ve5-P1-MnY"/>
                         <outlet property="locationTextField" destination="eXj-xz-4mB" id="wGI-mg-Lbd"/>
                         <outlet property="saveButton" destination="3DH-aT-dw9" id="JPt-mK-8xz"/>
+                        <outlet property="tripNameTextField" destination="q4V-dy-c9P" id="Zcj-j5-Yyq"/>
                         <outlet property="uploadButton" destination="EyR-P9-gZa" id="nvN-Kg-7kf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wBJ-wG-Of1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ajq-gl-0xF" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2909.5999999999999" y="-322.48875562218893"/>
         </scene>
