--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K0N-Um-D7r">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalEntriesTableViewCell" rowHeight="107" id="ogn-4c-QqH" customClass="JournalEntriesTableViewCell" customModule="TripLog" customModuleProvider="target">
@@ -153,17 +153,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ii-nS-oVb">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem title="Share" id="pib-Gy-CPo">
-                                        <connections>
-                                            <action selector="shareButtonClicked:" destination="Wqa-rV-cbl" id="PTs-i6-169"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -176,7 +165,13 @@
                             <constraint firstAttribute="trailingMargin" secondItem="hap-qm-Mcf" secondAttribute="trailing" id="xrl-Tx-1Ix"/>
                         </constraints>
                     </view>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem title="Share" id="Dh2-oQ-ZSH">
+                            <connections>
+                                <action selector="shareButtonClicked:" destination="Wqa-rV-cbl" id="bHa-At-pFE"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="U2W-S1-e0R">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="bj6-zf-X5E">
                             <connections>
@@ -208,10 +203,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bno-dX-jtP">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </scrollView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HPR-UK-3Dz">
                                 <rect key="frame" x="10" y="74" width="355" height="30"/>
                                 <subviews>
@@ -283,22 +274,6 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nc5-XP-0am">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <items>
-                                    <barButtonItem title="Camera" id="RhU-ia-bAX">
-                                        <connections>
-                                            <action selector="importImage:" destination="TYM-nd-d0E" id="mjq-Vg-QLv"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="xKl-Vp-Nyd"/>
-                                    <barButtonItem title="Upload a photo/video" id="FRW-Do-qwm">
-                                        <connections>
-                                            <action selector="importImage:" destination="TYM-nd-d0E" id="aU2-kT-Y0N"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -306,18 +281,28 @@
                             <constraint firstItem="sUF-fr-IgY" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="5hL-ms-fYc"/>
                             <constraint firstItem="HPR-UK-3Dz" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="97z-IT-yRZ"/>
                             <constraint firstItem="sUF-fr-IgY" firstAttribute="top" secondItem="HPR-UK-3Dz" secondAttribute="bottom" constant="10" id="IsY-ui-zdx"/>
-                            <constraint firstItem="Nc5-XP-0am" firstAttribute="top" secondItem="lCp-Af-4Wr" secondAttribute="top" id="Pyc-Cb-PCx"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="sUF-fr-IgY" secondAttribute="bottom" constant="10" id="VZp-TP-RuP"/>
                             <constraint firstItem="HPR-UK-3Dz" firstAttribute="top" secondItem="KWp-x1-Kqo" secondAttribute="bottom" constant="10" id="WIE-Jg-PdV"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="sUF-fr-IgY" secondAttribute="bottom" constant="10" id="Xt2-9d-uAi"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="dAe-HS-g6G"/>
                             <constraint firstAttribute="trailing" secondItem="sUF-fr-IgY" secondAttribute="trailing" constant="10" id="ghc-qX-qNA"/>
-                            <constraint firstItem="Nc5-XP-0am" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" id="qtQ-Mz-fvy"/>
                             <constraint firstAttribute="trailing" secondItem="HPR-UK-3Dz" secondAttribute="trailing" constant="10" id="sHV-e9-dQM"/>
                             <constraint firstItem="lCp-Af-4Wr" firstAttribute="top" secondItem="6UN-oG-i3J" secondAttribute="bottom" constant="10" id="vgA-Ed-F2B"/>
                         </constraints>
                     </view>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem title="Camera" id="Ats-XL-Rhc">
+                            <connections>
+                                <action selector="importImage:" destination="TYM-nd-d0E" id="WFD-FC-hB1"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="wda-W4-gxP"/>
+                        <barButtonItem title="Upload a photo/video" id="cIb-r4-XZ9">
+                            <connections>
+                                <action selector="importImage:" destination="TYM-nd-d0E" id="Pfm-Kh-aDK"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="Edit Journal" id="YOH-NV-Qwm">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="QGT-mv-GQv">
                             <connections>
@@ -333,13 +318,13 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="cameraButton" destination="RhU-ia-bAX" id="W5e-qi-5B5"/>
+                        <outlet property="cameraButton" destination="Ats-XL-Rhc" id="Yhy-6U-phl"/>
                         <outlet property="dateTextField" destination="2Se-qX-lMN" id="ls4-eN-zg0"/>
                         <outlet property="journalTextView" destination="6UN-oG-i3J" id="cQj-VR-em5"/>
                         <outlet property="locationTextField" destination="cbN-wT-bkh" id="FBp-7s-xsS"/>
                         <outlet property="saveButton" destination="fZO-E6-RLF" id="8Nz-4W-JRz"/>
                         <outlet property="tripNameTextField" destination="zvE-Na-lZH" id="MbE-sM-lgu"/>
-                        <outlet property="uploadButton" destination="FRW-Do-qwm" id="495-PH-w2i"/>
+                        <outlet property="uploadButton" destination="cIb-r4-XZ9" id="kMU-7W-RGy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sD3-v7-Pww" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -360,7 +345,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ytS-jf-ctG">
-                                <rect key="frame" x="10" y="84" width="355" height="30"/>
+                                <rect key="frame" x="10" y="40" width="355" height="30"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9pX-NR-nCB">
                                         <rect key="frame" x="0.0" y="0.0" width="172.5" height="30"/>
@@ -405,13 +390,13 @@
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QgO-Sw-gyA">
-                                <rect key="frame" x="10" y="164" width="355" height="449"/>
+                                <rect key="frame" x="10" y="120" width="355" height="493"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ddn-6w-CEX">
-                                <rect key="frame" x="10" y="124" width="355" height="30"/>
+                                <rect key="frame" x="10" y="80" width="355" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrV-Tn-v0Z">
                                         <rect key="frame" x="0.0" y="0.0" width="87" height="30"/>
@@ -514,7 +499,7 @@
         <!--Journal Entries-->
         <scene sceneID="UFQ-qb-iYX">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="weU-06-GHG" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="weU-06-GHG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Journal Entries" image="note-write-7" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sXf-de-ijy">
